--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <title>Kropp Fitness</title>
   <link
     rel="stylesheet"
+    href="https://www.npmjs.com/package/@a1rth/css-normalize"
+  >
+  <link
+    rel="stylesheet"
     href="styles.css"
   >
 </head>
