--- a/index.html
+++ b/index.html
@@ -148,6 +148,36 @@
       </ul>
     </div>
   </section>
+
+  <section class="motivation">
+    <h2 class="visually-hidden">Motivation</h2>
+    <ul class="motivation-list">
+      <li class="motivation-item">
+        <div class="motivation-card container">
+          <div class="motivation-card-body">
+            <h3
+              class="motivation-card-title backdrop-title"
+              data-title="Strong"
+            >
+              Be you, just stronger! <br/>
+              Power is in you
+            </h3>
+            <div class="motivation-card-description">
+              <p>Unum solum justo ex ius. Pro cu probo laboramus eius insolens euripidis te eos, ut agam tota.</p>
+            </div>
+          </div>
+          <img
+            class="motivation-card-image"
+            src="./images/motivation/1.jpg"
+            alt="A man pulling up on a horizontal bar"
+            width="518"
+            height="760"
+            loading="lazy"
+          />
+        </div>
+      </li>
+    </ul>
+  </section>
 </main>
 
 </body>
