--- a/index.html
+++ b/index.html
@@ -159,17 +159,52 @@
               class="motivation-card-title backdrop-title"
               data-title="Strong"
             >
-              Be you, just stronger! <br/>
+              Be you, just stronger! <br />
               Power is in you
             </h3>
             <div class="motivation-card-description">
               <p>Unum solum justo ex ius. Pro cu probo laboramus eius insolens euripidis te eos, ut agam tota.</p>
             </div>
+            <a
+              class="motivation-card-button button transparent"
+              href="/"
+            >
+              View more
+            </a>
           </div>
           <img
             class="motivation-card-image"
             src="./images/motivation/1.jpg"
             alt="A man pulling up on a horizontal bar"
+            width="518"
+            height="760"
+            loading="lazy"
+          />
+        </div>
+      </li>
+      <li class="motivation-item">
+        <div class="motivation-card container">
+          <div class="motivation-card-body">
+            <h3
+              class="motivation-card-title backdrop-title"
+              data-title="Start"
+            >Today is the best <br/>
+              day to start!
+            </h3>
+            <div class="motivation-card-description">
+              <p>Sed abhorreant constituam consectetuer eu. At mei clita deserunt, his movet molestie nemore.</p>
+            </div>
+            <a
+              class="motivation-card-button button transparent"
+              href="/"
+            >
+              View more
+            </a>
+          </div>
+          <img
+            class="motivation-card-image"
+            src="./images/motivation/2.jpg"
+            alt="Man width dumbbells"
             width="518"
             height="760"
             loading="lazy"
