--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="motivation-card container">
           <div class="motivation-card-body">
             <h3
-              class="motivation-card-title backdrop-title"
+              class="motivation-card-title backdrop-title title-medium"
               data-title="Strong"
             >
               Be you, just stronger! <br />
@@ -186,7 +186,7 @@
         <div class="motivation-card container">
           <div class="motivation-card-body">
             <h3
-              class="motivation-card-title backdrop-title"
+              class="motivation-card-title backdrop-title title-medium"
               data-title="Start"
             >Today is the best <br/>
               day to start!
