--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <h3
               class="motivation-card-title backdrop-title title-medium"
               data-title="Start"
-            >Today is the best <br/>
+            >Today is the best <br />
               day to start!
             </h3>
             <div class="motivation-card-description">
@@ -212,6 +212,139 @@
         </div>
       </li>
     </ul>
+  </section>
+
+  <section class="training-types">
+    <h2 class="visually-hidden">Types of training</h2>
+    <ul class="training-types-list">
+      <li class="training-types-item">
+        <img
+          class="training-types-image"
+          src="./images/training-types/1.svg"
+          alt=""
+          width="150"
+          height="140"
+          loading="lazy"
+        />
+        <h3 class="training-types-item-title">Maxpump</h3>
+      </li>
+      <li class="training-types-item">
+        <img
+          class="training-types-image"
+          src="./images/training-types/2.svg"
+          alt=""
+          width="150"
+          height="140"
+          loading="lazy"
+        />
+        <h3 class="training-types-item-title">aron gym</h3>
+      </li>
+      <li class="training-types-item">
+        <img
+          class="training-types-image"
+          src="./images/training-types/3.svg"
+          alt=""
+          width="150"
+          height="140"
+          loading="lazy"
+        />
+        <h3 class="training-types-item-title">fit & tone</h3>
+      </li>
+      <li class="training-types-item">
+        <img
+          class="training-types-image"
+          src="./images/training-types/4.svg"
+          alt=""
+          width="150"
+          height="140"
+          loading="lazy"
+        />
+        <h3 class="training-types-item-title">forza</h3>
+      </li>
+      <li class="training-types-item">
+        <img
+          class="training-types-image"
+          src="./images/training-types/5.svg"
+          alt=""
+          width="150"
+          height="140"
+          loading="lazy"
+        />
+        <h3 class="training-types-item-title">balance fitness</h3>
+      </li>
+      <li class="training-types-item">
+        <img
+          class="training-types-image"
+          src="./images/training-types/6.svg"
+          alt=""
+          width="150"
+          height="140"
+          loading="lazy"
+        />
+        <h3 class="training-types-item-title">balance fitness</h3>
+      </li>
+    </ul>
+  </section>
+
+  <section class="join-us">
+    <div class="join-us-video-wrapper">
+      <video
+        class="join-us-video"
+        src=""
+        width="960"
+        height="600"
+        poster="./images/video-placeholder.jpg"
+      ></video>
+      <button
+        class="join-us-video-button"
+        type="button"
+      >
+        Play
+      </button>
+    </div>
+    <div class="join-us-body container">
+      <h2 class="joiun-us-title">Join us</h2>
+      <form
+        class="join-us-form"
+      >
+        <header class="join-us-form-header">
+          <h3
+            class="join-us-form-title backdrop-title"
+            data-title="Go!"
+          >Start here</h3>
+          <div class="join-us-form-subtitle">fill the form below to start your journey</div>
+        </header>
+        <div class="join-us-form-body">
+          <label
+            for="username"
+            class="visually-hidden"
+          >Name</label>
+          <input
+            class="join-us-form-input input"
+            id="username"
+            placeholder="Name"
+          />
+
+          <label
+            for="email"
+            class="visually-hidden"
+          >Email</label>
+          <input
+            class="join-us-form-input input"
+            id="email"
+            placeholder="Email"
+            type="email"
+          />
+
+          <button
+            class="join-us-form-button button transparent"
+            type="submit"
+          >
+            Subscribe
+          </button>
+        </div>
+      </form>
+    </div>
   </section>
 </main>
 
