--- a/index.html
+++ b/index.html
@@ -296,20 +296,20 @@
         poster="./images/video-placeholder.jpg"
       ></video>
       <button
-        class="join-us-video-button"
+        class="join-us-video-play-button"
         type="button"
       >
         Play
       </button>
     </div>
     <div class="join-us-body container">
-      <h2 class="joiun-us-title">Join us</h2>
+      <h2 class="join-us-title">Join us</h2>
       <form
         class="join-us-form"
       >
         <header class="join-us-form-header">
           <h3
-            class="join-us-form-title backdrop-title"
+            class="join-us-form-title backdrop-title centered title-big"
             data-title="Go!"
           >Start here</h3>
           <div class="join-us-form-subtitle">fill the form below to start your journey</div>
